--- a/src/index.css
+++ b/src/index.css
@@ -20,3 +20,24 @@ code {
   background-repeat: no-repeat;
   background-size: cover;
 }
+
+.footer {
+  font-family: 'Open Sans', sans-serif;
+  padding: 20px;
+  background: #444444;
+}
+
+/* the height of header navbar */
+.navbar {
+  padding: 0.5rem 0;
+}
+
+/* the width of header logo */
+.navbar-brand {
+  margin-right: 80px;
+}
+
+/* spacing between nav item */
+.navbar-nav .nav-link {
+  margin: 0 10px 0 0;
+}
