--- a/src/App.css
+++ b/src/App.css
@@ -33,3 +33,17 @@
 .result-block-container .result-block {
   opacity: 1;
 }
+
+@media (min-width: 540px) {
+  .datagrid .container {
+    max-width: 1600px;
+  } 
+}
+
+.container {
+    width: 100%;
+    padding-right: 15px;
+    padding-left: 15px;
+    margin-right: auto;
+    margin-left: auto;
+}
