--- a/src/index.css
+++ b/src/index.css
@@ -29,7 +29,7 @@ code {
 
 /* the height of header navbar */
 .navbar {
-  padding: 0.5rem 0;
+  padding: 0.6em 0; /* vert hor */
 }
 
 /* the width of header logo */
